  other parts of mrcal work (for instance the
  [[file:mrcal-show-residuals-board-observation.html][=mrcal-show-residuals-board-observation=]] tool).

- Added =mrcal_cameramodel_converter()= "converter" function that can be used
  with =O&= conversions in [[https://docs.python.org/3/c-api/arg.html#c.PyArg_ParseTupleAndKeywords][=PyArg_ParseTupleAndKeywords()=]] calls. Can interpret
  either path strings or [[file:mrcal-python-api-reference.html#cameramodel][=mrcal.cameramodel=]] objects as =mrcal_cameramodel_t= C
  structures. Useful for writing Python extension modules for C code that uses
  =mrcal_cameramodel_t=.

- Added =mrcal_image_void_t= image type for generic functions that aren't meant
  to interface with any particular image type.

- Some fiels in the [[file:mrcal-python-api-reference.html#cameramodel][=mrcal.cameramodel=]] type and the saved =.cameramodel= files
  and the =optimization_inputs= C and Python interfaces were renamed:

  \begin{aligned}
  &\mathrm{extrinsics\_rt\_fromref} & \rightarrow & \mathrm{rt\_cam\_ref} \\
  &\mathrm{extrinsics\_Rt\_fromref} & \rightarrow & \mathrm{Rt\_cam\_ref} \\
  &\mathrm{extrinsics\_rt\_toref} & \rightarrow & \mathrm{rt\_ref\_cam} \\
  &\mathrm{extrinsics\_Rt\_toref} & \rightarrow & \mathrm{Rt\_ref\_cam} \\
  &\mathrm{frames\_rt\_fromref} & \rightarrow & \mathrm{rt\_frame\_ref} \\
  &\mathrm{frames\_Rt\_fromref} & \rightarrow & \mathrm{Rt\_frame\_ref} \\
  &\mathrm{frames\_rt\_toref} & \rightarrow & \mathrm{rt\_ref\_frame} \\
  &\mathrm{frames\_Rt\_toref} & \rightarrow & \mathrm{Rt\_ref\_frame} \\
  &\end{aligned}

  This makes things more consistent. Compatibility logic is in place, so old
  code and data should keep working. New =.cameramodel= files write both the new
  and old fields, so old tools can read the new files.

- [[file:mrcal-python-api-reference.html#-stereo_range][=mrcal.stereo_range()=]] has a better default for dispairty_max to handle